syntax = "proto3";
package pb;
import "code.proto";

//活动操作

// 新邮件
message NewMail {
    string From = 1;
    string To = 2;
    string Content = 3;
}

// 新邮件列表
message NewMailList
{
    string Maxid = 1;//邮件缓存中的最大邮件ID
    string Userid = 2;
}

// 删除邮件
message DeleteMail
{
    string Id   = 1;//邮件ID
    string Userid = 2;
}

// 收取附件
message GetMailItem
{
    string Id   = 1; //邮件ID
    string Userid = 2;
}

// 绑定代理id
message BuildAgent
{
    string Userid = 1;//绑定代理id
    string Agent = 2;//已经绑定id
    string Uid = 3;//玩家id
}

message BuiltAgent
{
    uint32 Result = 1;//结果
    string Agent = 2;//绑定id
}

//银行操作
message BankGive {
    string Userid = 1;//赠送对象
    uint32 Amount = 2;//赠送金额数量
}

message BankGave {
    string Userid = 1;//赠送对象
    uint32 Amount = 2;//赠送金额数量
    uint32 Coin = 3;//赠送对象自身金额数量
    ErrCode error  = 4 ;// 错误码
}

//投注操作
message BetsOn {
    string Userid = 1 ;//玩家id
    uint32 Seat   = 2 ;//押注位置
    uint32 Number = 3 ;//押注数量
}

//投注记录操作
message BetsRecord {
    string Userid = 1;//玩家id
    uint32 Page = 2; //页数,每页30,默认发1最近30场
}

//投注设置
message SetOdds {
    uint32 Seat   = 1 ;//位置
    float  Number = 2 ;//赔率
}

//投注超时
message BetsTimeout {
    uint32 Timer  = 1 ;
}

//投注结果
message BetsResult {
    string Userid = 1;//玩家id
    string Message = 2; //消息
}

//投注奖励
message BetsPrize {
    string Userid = 1;
    int32 Type = 2;//变动类型
    int32 Diamond = 3;//变动钻石数量
}
